# directory-count

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: pr-checks.yaml  release.yaml
src/: main.rs
